k8s/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notification
        image: miheret217/notification-service:v7
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
