k8s/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: miheret217/order-service:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 8000 
  type: ClusterIP
