k8s/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: miheret217/payment-service:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 8000
  type: ClusterIP
